--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="color-scheme" content="light dark"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/404.html" />
-<title>404 Page not found | My New Hugo Site</title>
+<meta property="og:url" content="https://sshchen.github.io/404.html" />
+<title>404 Page not found | Algorithm</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.7291605ac8d2a6cbc29745fbae4dc0911515b97e5f1bbadd930355c35aaee9cf.js" integrity="sha256-cpFgWsjSpsvCl0X7rk3AkRUVuX5fG7rdkwNVw1qu6c8=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.91b5d9fa9cd92f3687dd6e0d4c403582f5f368537ce69fd46f4d415965d5357e.js" integrity="sha256-kbXZ&#43;pzZLzaH3W4NTEA1gvXzaFN85p/Ub01BWWXVNX4=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -40,7 +40,7 @@ https://github.com/alex-shpak/hugo-book
         <h1>404</h1>
         <h2>Page Not Found</h2>
         <h3>
-          <a href="/">My New Hugo Site</a>
+          <a href="/">Algorithm</a>
         </h3>
       </div>
     </main>
