--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.be533f73cc8e3f02643cbaec240c4a7db94ffe4b0b0dd46f49b85ed5af7c771f.js" integrity="sha256-vlM/c8yOPwJkPLrsJAxKfblP/ksLDdRvSbhe1a98dx8=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.1dea1036eabe7e7709a4bd50977016d0c047ce8efc123ed180414ba04dec220c.js" integrity="sha256-HeoQNuq&#43;fncJpL1Ql3AW0MBHzo78Ej7RgEFLoE3sIgw=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
